# personal-health-studio

./: .gitignore  BLOG_POST.md  BLOG_POST_IMAGE_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  DEMO_PREPARATION.md  DEMO_SCRIPT.md  INITIALIZATION-SUMMARY.md  LICENSE  PHASE_3_SEMANTIC_MODEL.md  PHASE_4_EXTRACTOR_INTEGRATION.md  Principles-and-Processes.md  README.md  README_FOR_FRIEND.md  README_FOR_NICHOLAS.md  SETUP-COMPLETE.md  SYSTEM_COMPLETE.md  plan.md  pyproject.toml
.claude/: settings.local.json
agents/analyst-agent/config/: agent-description.md  agent-instructions.md
agents/extractor-agent/: health_pdf_extractor.py
agents/extractor-agent/config/: agent-description.md  agent-instructions.md
agents/extractor-agent/knowledge/: clinical-data-extraction-schema.json  lab-results-extraction-schema.json  medications-extraction-schema.json  vitals-extraction-schema.json
data-store/snowflake/ddl/: health_intelligence_ddl.sql
data-store/snowflake/scripts/: verify_import.sql
docs/: Acrobat.md
docs/Research/: Medical.md  Session-Log-20260212-Summary.md
requirements/technical/: data-modeling-principles.md  mcp-tool-requirements.md
semantic-model/snowflake/: health_intelligence_semantic_model.yaml
tools/health-mcp/: DEMO_REFERENCE.md  README.md  debug_data.py  deploy_schema.py  generate_sample_report.py  pyproject.toml  sample_health_report.html  test_connection.py  test_extraction_e2e.py  test_semantic.py  test_tools.py
tools/health-mcp/src/: __init__.py  health_mcp.py  health_models.py  nl_mapper.py  semantic_query_executor.py  snowflake_client.py
