[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-health-studio"
version = "0.1.0"
description = "Transform health PDFs into actionable intelligence using Claude, Snowflake, and multi-agent AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Personal Health Studio Team"}
]
keywords = ["health", "ai", "claude", "snowflake", "mcp", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Healthcare",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "snowflake-connector-python>=3.4.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

mcp = [
    "mcp>=0.1.0",
    "anthropic>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/bizcad/personal-health-studio"
Repository = "https://github.com/bizcad/personal-health-studio.git"
Issues = "https://github.com/bizcad/personal-health-studio/issues"
Documentation = "https://github.com/bizcad/personal-health-studio/blob/main/README.md"

[tool.setuptools]
packages = ["health_mcp"]

[tool.setuptools.package-data]
health_mcp = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=health_mcp --cov-report=term-miss"
