[project]
name = "health-mcp"
version = "0.1.0"
description = "MCP server for Personal Health Intelligence - Snowflake import and query tools"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "snowflake-connector-python>=3.12.0",
    "cryptography>=43.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
